# yolo_runner

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
app/: main.cc
config/: example_config.yml
include/yolo_runner/: example_class.h
launch/: example.launch
scripts/: darknet_images.py  example_ros_node.py
src/: example_class.cc
